--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -4,19 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <title>Express Skills</title>
 </head>
 
 <body>
-    <h1>Welcome to our GA Cohort</h1>
-    <h3>Below are our top members</h3>
+    <h1>Welcome to Skilleage</h1>
+    <h3>Below are the most important things you will ever know:</h3>
     <ul>
-        <% cohort.forEach(function(obj) { %>
+        <% skills.forEach(function(s) { %>
         <li>
-            <%= obj.student %>
+            <form action="/skills/<%= s.id %>?_method=DELETE" class="delete-form" method="POST">
+                <button class="X" type="submit">X</button>
+            </form>
+            <a href="/skills/<%= s.id %>"><%= s.skill %></a>
+            -
+            <%= s.learned ? 'learned' : 'not learned' %>
         </li>
+
         <% }) %>
+        <a href="/skills/new">Add Skill</a>
     </ul>
+
+
 </body>
 
 </html>
