--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <title>Express Skill</title>
 </head>
 
 <body>
-    <h1>Student Expertise <%= expert %></h1>
-    <h3>
-        <%= expertise %>
-    </h3>
+    <a href="/">Home</a> <a href="/skills">Skillset</a>
+    <h1>Skill <%= skillNum %></h1>
 </body>
 
 </html>
