--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -12,6 +12,9 @@
 <body>
     <a href="/">Home</a> <a href="/skills">Skillset</a>
     <h1>Skill <%= skillNum %></h1>
+    <h3><%= skill.skill %></h3>
+    <h3>Learned: <%= skill.learned ? 'Yes' : 'No' %></h3>
+
 </body>
 
 </html>
