--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Welcome to Skilleage</h1>
+    <h1>Welcome to Important Things</h1>
     <h3>Below are the most important things you will ever know:</h3>
     <ul>
         <% skills.forEach(function(s) { %>
